# ai_class

./: .gitignore  README.md  cosine_similarity.py  main.py  markov_chain.py  naive_bayes_classification.py  pyproject.toml  ruff.toml
basics/: cosine_similarity.py  markov_chain.py  naive_bayes_classification.py
data/: comments_with_labels.pkl  text.txt
gen_ai/RAG/: RAG_System.ipynb  RAG_with_faiss.ipynb
gen_ai/descision_tree/: customer_churn.py
gen_ai/fine_tunning/: Fine_Tuning_LLMs_with_Hugging_Face.ipynb
gen_ai/neural_network/: purchase_prediction.py  purchase_prediction_with_diagram.py
gen_ai/supervised/: predict_energy_efficiency.py
gen_ai/unsupervised/: vehicle_clustering.py
shared/: print_header.py
spacy_utils/: __init__.py  utils.py
