[project]
name = "ai-class"
version = "0.1.0"
description = "This repository is to explain ai basics"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "spacy>=3.0.0,<4.0.0",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl"
]
